--- a/charts/forms-flow-web/templates/configmap.yaml
+++ b/charts/forms-flow-web/templates/configmap.yaml
@@ -35,6 +35,12 @@ data:
         "REACT_APP_MT_ADMIN_BASE_URL": "${REACT_APP_MT_ADMIN_BASE_URL}",
         "REACT_APP_MT_ADMIN_BASE_URL_VERSION": "v1",
         "REACT_APP_MULTI_TENANCY_ENABLED": "${REACT_APP_MULTI_TENANCY_ENABLED}",
-        "REACT_APP_KEYCLOAK_ENABLE_CLIENT_AUTH": "${REACT_APP_KEYCLOAK_ENABLE_CLIENT_AUTH}"
+        "REACT_APP_KEYCLOAK_ENABLE_CLIENT_AUTH": "${REACT_APP_KEYCLOAK_ENABLE_CLIENT_AUTH}",
+        "REACT_APP_CUSTOM_SUBMISSION_URL": "${REACT_APP_CUSTOM_SUBMISSION_URL}",
+        "REACT_APP_CUSTOM_SUBMISSION_ENABLED": "${REACT_APP_CUSTOM_SUBMISSION_ENABLED}",
+        "REACT_APP_DOCUMENT_SERVICE_URL": "${REACT_APP_DOCUMENT_SERVICE_URL}",
+        "REACT_APP_DRAFT_ENABLED": "${REACT_APP_DRAFT_ENABLED}",
+        "REACT_APP_DRAFT_POLLING_RATE": "${REACT_APP_DRAFT_POLLING_RATE}",
+        "REACT_APP_EXPORT_PDF_ENABLED": "${REACT_APP_EXPORT_PDF_ENABLED}"
 
       }
