--- a/charts/forms-flow-web/templates/deployment.yaml
+++ b/charts/forms-flow-web/templates/deployment.yaml
@@ -97,6 +97,36 @@ spec:
             configMapKeyRef:
               key: KEYCLOAK_ENABLE_CLIENT_AUTH
               name: "{{ .Values.formsflow.configmap }}"
+        - name: REACT_APP_CUSTOM_SUBMISSION_URL
+          valueFrom:
+            configMapKeyRef:
+              key: CUSTOM_SUBMISSION_URL
+              name: "{{ .Values.formsflow.configmap }}"
+        - name: REACT_APP_CUSTOM_SUBMISSION_ENABLED
+          valueFrom:
+            configMapKeyRef:
+              key: CUSTOM_SUBMISSION_ENABLED
+              name: "{{ .Values.formsflow.configmap }}"
+        - name: REACT_APP_DOCUMENT_SERVICE_URL
+          valueFrom:
+            configMapKeyRef:
+              key: FORMSFLOW_DOC_API_URL
+              name: "{{ .Values.formsflow.configmap }}"
+        - name: REACT_APP_DRAFT_ENABLED
+          valueFrom:
+            configMapKeyRef:
+              key: DRAFT_ENABLED
+              name: "{{ .Values.formsflow.configmap }}"
+        - name: REACT_APP_DRAFT_POLLING_RATE
+          valueFrom:
+            configMapKeyRef:
+              key: DRAFT_POLLING_RATE
+              name: "{{ .Values.formsflow.configmap }}"
+        - name: REACT_APP_EXPORT_PDF_ENABLED
+          valueFrom:
+            configMapKeyRef:
+              key: EXPORT_PDF_ENABLED
+              name: "{{ .Values.formsflow.configmap }}"        
 
         image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         lifecycle:
