Updating to stable release version

--- a/charts/forms-flow-admin/values.yaml
+++ b/charts/forms-flow-admin/values.yaml
@@ -19,7 +19,7 @@ ingress:
 image:
   registry: docker.io
   repository: formsflow/forms-flow-ai-admin
-  tag: v5.0.0-alpha #The image tag to pull from
+  tag: v5.0.0 #The image tag to pull from
 
 postgresql:
   auth:
