updated redis-exporter subchart name

--- a/charts/forms-flow-analytics/values.yaml
+++ b/charts/forms-flow-analytics/values.yaml
@@ -33,7 +33,7 @@ postgresql:
     containerSecurityContext:
       runAsUser: "auto"
 
-redisExporter:
+redis-exporter:
   exporter:
     image:  
       registry: docker.io
