--- a/charts/forms-flow-idm/values.yaml
+++ b/charts/forms-flow-idm/values.yaml
@@ -1,5 +1,4 @@
 ---
-Domain: #<DEFINE_ME>
 keycloak:
   extraEnvVars: 
     - name: KEYCLOAK_ADMIN_USER
@@ -8,8 +7,6 @@ keycloak:
       value: "-Dkeycloak.import=/realm/realm.json" 
     - name: KEYCLOAK_PROXY_ADDRESS_FORWARDING
       value: "true"
-    - name: KEYCLOAK_FRONTEND_URL
-      value: #<DEFINE_ME>/auth"
     - name: JAVA_OPTS
       value: >-
         -Dkeycloak.profile.feature.scripts=enabled
@@ -83,7 +80,7 @@ keycloak:
     enabled: true
     extraTls:
       - {}
-    hostname: #<DEFINE_ME>
+    hostname:  #DEFINE_ME
     path: /auth
     pathType: Prefix
     servicePort: http
