--- a/charts/forms-flow-analytics/templates/secret.yaml
+++ b/charts/forms-flow-analytics/templates/secret.yaml
@@ -7,12 +7,11 @@ metadata:
   name: "{{ .Chart.Name }}"
 stringData:
   POSTGRES_HOST_AUTH_METHOD: trust
-  POSTGRES_PASSWORD: "{{ .Values.postgresql.auth.postgresPassword }}"
+  POSTGRES_PASSWORD: postgres
   PYTHONUNBUFFERED: "0"
   REDASH_COOKIE_SECRET: redash-selfhosted
-  REDASH_DATABASE_URL: "{{ .Values.redash.database.url }}"
-  REDASH_DATABASE_PASSWORD: "{{ .Values.redash.database.password }}"
   REDASH_LOG_LEVEL: INFO
   REDASH_REDIS_URL: "redis://redis-exporter:6379/0" # url of the redis database to connect to
   REDASH_SECRET_KEY: redash-selfhosted
   REDASH_MULTI_ORG: 'false'
+  REDASH_DATABASE_PASSWORD: "{{ .Values.database.password }}"
