Added conditional logic for DATABASE_ ConfigMap Values

--- a/charts/forms-flow-ai/templates/configmap.yaml
+++ b/charts/forms-flow-ai/templates/configmap.yaml
@@ -4,9 +4,9 @@ kind: ConfigMap
 metadata:
   name: {{ .Chart.Name }}
 data:
-  DATABASE_NAME: "{{tpl .Values.postgresql.auth.database .}}"
-  DATABASE_PORT: "{{.Values.postgresql.primary.service.ports.postgresql}} "
-  DATABASE_SERVICE_NAME: "{{tpl .Values.postgresql.fullnameoverride .}}"
+  DATABASE_NAME: {{ ternary "{{tpl .Values.postgresql.auth.database .}}" "<DEFINE_ME>" .Values.postgresql.enabled | quote }}
+  DATABASE_PORT: {{ ternary "{{.Values.postgresql.primary.service.ports.postgresql}}" "<DEFINE_ME>" .Values.postgresql.enabled | quote }}
+  DATABASE_SERVICE_NAME: {{ ternary "{{tpl .Values.postgresql.fullnameoverride .}}" "<DEFINE_ME>" .Values.postgresql.enabled | quote }}
   CAMUNDA_API_URI: "https://forms-flow-bpm-{{.Release.Namespace}}.{{.Values.Domain}}/camunda"
   KEYCLOAK_JWT_OIDC_ALGORITHMS: "RS256"
   KEYCLOAK_JWT_OIDC_CACHING_ENABLED: "True"
