--- a/charts/forms-flow-bpm/values.yaml
+++ b/charts/forms-flow-bpm/values.yaml
@@ -28,7 +28,7 @@ camunda:
     url: "jdbc:postgresql://${CAMUNDA_DATABASE_SERVICE_NAME}:${CAMUNDA_DATABASE_PORT}/${CAMUNDA_DATABASE_NAME}"
   websocket:
     messageType: TASK_EVENT #WEBSOCKET_MESSAGE_TYPE
-    securityOrigin: {{ randAlphaNum 9 | quote }} #WEBSOCKET_SECURITY_ORIGIN
+    securityOrigin:   #WEBSOCKET_SECURITY_ORIGIN
 
 image:
   registry: docker.io
