--- a/charts/forms-flow-ai/templates/secret.yaml
+++ b/charts/forms-flow-ai/templates/secret.yaml
@@ -13,3 +13,4 @@ stringData:
   WEB_CLIENTID: {{ index .Values "forms-flow-web" "clientid"}}
   WEBSOCKET_ENCRYPT_KEY: "{{.Values.websocket_encrypt_key}}"
   ADMIN_WEB_CLIENTID: {{ index .Values "forms-flow-web" "clientid"}}
+  INSIGHT_API_KEY:  "{{.Values.insight_api_key}}"
