Fixing issue with api db config value

--- a/charts/forms-flow-ai/templates/configmap.yaml
+++ b/charts/forms-flow-ai/templates/configmap.yaml
@@ -34,9 +34,9 @@ data:
   CUSTOM_SUBMISSION_URL: ""
   CUSTOM_SUBMISSION_ENABLED: "false"
   FORMSFLOW_DOC_API_URL: "https://forms-flow-documents-api-{{.Release.Namespace}}.{{.Values.Domain}}"
-  DRAFT_ENABLED: "false"
+  DRAFT_ENABLED: "{{.Values.draft_enabled}}"
   DRAFT_POLLING_RATE: "15000"
-  EXPORT_PDF_ENABLED: "false"
+  EXPORT_PDF_ENABLED: "{{.Values.export_pdf_enabled}}"
   REDIS_HOST: "{{.Values.redis_host}}"
   REDIS_PORT: "{{.Values.redis_port}}"
   REDIS_ENABLED: "false"
