Fixed invalid json issue with NODE_CONFIG var

--- a/charts/forms-flow-ai/templates/configmap.yaml
+++ b/charts/forms-flow-ai/templates/configmap.yaml
@@ -21,7 +21,11 @@ data:
   FORMIO_DOMAIN: "https://forms-flow-forms-{{.Release.Namespace}}.{{.Values.Domain}}"
   WEB_API_URL: "https://forms-flow-api-{{.Release.Namespace}}.{{.Values.Domain}}"
   MONGODB_URI:  {{ ternary (tpl "mongodb://{{ .Values.mongodb.auth.usernames | first }}:{{ .Values.mongodb.auth.passwords | first }}@{{ .Values.mongodb.service.nameOverride }}:{{ .Values.mongodb.service.ports.mongodb }}/{{ .Values.mongodb.auth.databases | first }}" .) "<DEFINE_ME>" .Values.mongodb.enabled | quote }} 
-  NODE_CONFIG:  {{ ternary (tpl "{mongo:mongodb://{{ .Values.mongodb.auth.usernames | first }}:{{ .Values.mongodb.auth.passwords | first }}@{{ .Values.mongodb.service.nameOverride }}:{{ .Values.mongodb.service.ports.mongodb }}/{{ .Values.mongodb.auth.databases | first }}}" .) "<DEFINE_ME>" .Values.mongodb.enabled | quote }}
+  {{- if .Values.mongodb.enabled }} 
+  NODE_CONFIG: '{"mongo":"mongodb://{{ .Values.mongodb.auth.usernames | first }}:{{ .Values.mongodb.auth.passwords | first }}@{{ .Values.mongodb.service.nameOverride }}:{{ .Values.mongodb.service.ports.mongodb }}/{{ .Values.mongodb.auth.databases | first }}"}'
+  {{- else }}
+  NODE_CONFIG: "<DEFINE_ME>"
+  {{- end }}
   FORMSFLOW_WEB_URL: "https://forms-flow-web-{{.Release.Namespace}}.{{.Values.Domain}}"
   FORMSFLOW_ADMIN_URL: "https://forms-flow-admin-{{.Release.Namespace}}.{{.Values.Domain}}/api/v1"
   FORMSFLOW_ADMIN_BASE: "https://forms-flow-admin-{{.Release.Namespace}}.{{.Values.Domain}}/api"
