--- a/charts/forms-flow-web/values.yaml
+++ b/charts/forms-flow-web/values.yaml
@@ -21,3 +21,5 @@ image:
   repository: formsflow/forms-flow-web
   tag: v5.0.1
 config_path: /usr/share/nginx/html/config/
+webclient: "{{.Chart.Name}}"
+webname: formsflow
