--- a/charts/forms-flow-admin/values.yaml
+++ b/charts/forms-flow-admin/values.yaml
@@ -19,6 +19,7 @@ formsflow:
 
 ingress: 
   enabled: true # create an ingress for this component 
+  hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{.Values.Domain}}"
   port: 5000
   path: /
 
