changed ingress and values

--- a/charts/forms-flow-analytics/values.yaml
+++ b/charts/forms-flow-analytics/values.yaml
@@ -1,4 +1,4 @@
-Domain: #<DEFINE_ME>
+Domain: formsflow-eks.aot-technologies.com
 
 database:
   username: postgres 
@@ -10,7 +10,7 @@ database:
 
 ingress: 
   enabled: true # create an ingress for this component
-  hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{.Values.Domain}}"
+  hostname: "{{.Values.Domain}}"
   port: 5000
 
 redis-exporter:
