--- a/charts/forms-flow-admin/templates/ingress.yaml
+++ b/charts/forms-flow-admin/templates/ingress.yaml
@@ -9,7 +9,7 @@ spec:
     - {}
   rules:
     -
-      host: "{{tpl .Values.ingress.hostname .}}"
+      host: "{{.Chart.Name}}-{{.Release.Namespace}}.{{.Values.Domain}}"
       http:
         paths:
           - path: {{ .Values.ingress.path }}
