--- a/charts/forms-flow-api/values.yaml
+++ b/charts/forms-flow-api/values.yaml
@@ -1,13 +1,13 @@
 ---
-Domain: #<DEFINE_ME>
+Domain: formsflow-eks.aot-technologies.com
 database:
   url: "postgresql://postgres:postgres@forms-flow-ai-postgresql:5432/{{.Chart.Name}}"
 resources:
   limits:
-    cpu: 600m
-    memory: 1Gi
+    cpu: 200m
+    memory: 2Gi
   requests:
-    cpu: 500m
+    cpu: 100m
     memory: 512Mi
 formsflow:
   configmap: forms-flow-ai # name of formsflow.ai configmap
