Added ingress.hostname templating for vanity urls

--- a/charts/forms-flow-api/templates/ingress.yaml
+++ b/charts/forms-flow-api/templates/ingress.yaml
@@ -9,7 +9,7 @@ spec:
     - {}
   rules:
     -
-      host: "{{.Chart.Name}}-{{.Release.Namespace}}.{{.Values.Domain}}"
+      host: "{{tpl .Values.ingress.hostname .}}"
       http:
         paths:
           - path: /
