--- a/charts/forms-flow-bpm/templates/configmap.yaml
+++ b/charts/forms-flow-bpm/templates/configmap.yaml
@@ -19,7 +19,7 @@ data:
   WAIT_FOR: " {{ .Values.waitFor }}"  
   WEBSOCKET_MESSAGE_TYPE: "{{ .Values.camunda.websocket.messageType }}"
   WEBSOCKET_SECURITY_ORIGIN: {{ ternary  (.Values.camunda.websocket.securityOrigin | quote) (randAlphaNum 6 | quote) (kindIs "string" .Values.camunda.websocket.securityOrigin) }}
-  BPM_BASE_URL: "https://forms-flow-bpm-{{.Release.Namespace}}.{{.Values.Domain}}"
+  BPM_BASE_URL: "https://{{tpl .Values.ingress.hostname .}}"
 kind: ConfigMap
 metadata:
   labels:
