--- a/charts/forms-flow-bpm/values.yaml
+++ b/charts/forms-flow-bpm/values.yaml
@@ -40,7 +40,8 @@ formsflow:
   secret: forms-flow-ai #name of formsflow.ai secret 
 
 ingress: 
-  enabled: true # create an ingress for this component 
+  enabled: true # create an ingress for this component
+  hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{.Values.Domain}}"
   port: 8080
 mail:
   from: "<DEFINE_ME>"
