Added ingress.hostname templating for vanity urls

--- a/charts/forms-flow-documents-api/values.yaml
+++ b/charts/forms-flow-documents-api/values.yaml
@@ -13,6 +13,7 @@ formsflow:
   secret: forms-flow-ai #name of formsflow.ai secret
 ingress: 
   enabled: true # create an ingress for this component 
+  hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{.Values.Domain}}"
   port: 5006
 image:
   registry: docker.io
