--- a/charts/forms-flow-forms/values.yaml
+++ b/charts/forms-flow-forms/values.yaml
@@ -12,6 +12,7 @@ image:
 
 ingress: 
   enabled: true # create an ingress for this component 
+  hostname: "{{.Chart.Name}}-{{.Release.Namespace}}.{{.Values.Domain}}"
   port: 3001
 
 resources:
